--- a/Web/css/web.css
+++ b/Web/css/web.css
@@ -3,7 +3,7 @@
 	position: relative;
 	height: 6373px;
 	color: #1d1f13;
-	letter-spacing: 0px;
+	letter-spacing: 0;
 	background-color: #fff;
 	overflow: hidden;
 }
@@ -49,23 +49,6 @@
 /* end card-a*/
 
 
-.border {
-	position: absolute; top: 0; left: 0; 
-	width: 100%; height: 100%;
-	border: 1px solid #e1e1e1;
-	border-radius: 100px;
-}
-
-.subtitle {
-	align-self: stretch;
-	font-size: 44px;
-	font-weight: 500;
-	line-height: 1.318;
-	text-align: center;
-}
-
-
-
 /* column-a */
 
 .column-a {
@@ -100,23 +83,6 @@
 	gap: 24px;
 }
 /* end column-b*/
-
-
-
-
-/* asds-a */
-
-.asds-a {
-	position: relative;
-	height: 35px;
-	flex-shrink: 0;
-	font-size: 10px;
-	font-weight: 400;
-	background-color: #f8f8f6;
-	padding: 10px 16px;
-	border-radius: 100px;
-}
-/* end asds-a*/
 
 
 .global {
@@ -218,27 +184,6 @@
 /* end column-f*/
 
 /* end row-b*/
-
-
-
-
-/* asds-b */
-
-.asds-b {
-	position: relative;
-	height: 35px;
-	flex-shrink: 0;
-	font-size: 10px;
-	font-weight: 400;
-	background-color: #f8f8f6;
-	padding: 10px 16px;
-	border-radius: 100px;
-}
-
-.asds-text2 {
-	text-transform: uppercase;
-}
-/* end asds-b*/
 
 
 .web-pyhoo48-a {
@@ -403,35 +348,10 @@
 }
 
 .web-col-top1 {
-	margin: 0 107px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 24px;
-	line-height: normal;
-}
-
-.web-asds1 {
-	position: relative;
-	backdrop-filter: blur(17px);
-	width: 100%; height: 35px;
-	max-width: 340px;
-	flex-shrink: 0;
-	font-size: 10px;
-	font-weight: 400;
-	text-align: left;
-	background-color: rgba(248, 248, 246, 0.45);
-	padding: 10px 16px;
-	border-radius: 100px;
-	overflow: hidden;
-}
-
-.web-text-31 {
-	text-transform: uppercase;
-}
-
-.web-border1 {
-	border: 1px solid rgba(225, 225, 225, 0.2);
 }
 
 .web-title {
@@ -547,25 +467,6 @@
 /* end row-a*/
 
 
-.web-col-top2 {
-	margin: 0 103px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 24px;
-}
-
-.web-asds2 {
-	position: relative;
-	width: 102px; height: 35px;
-	flex-shrink: 0;
-	font-size: 10px;
-	font-weight: 400;
-	background-color: #f8f8f6;
-	padding: 10px 16px;
-	border-radius: 100px;
-}
-
 .row1 {
 	gap: 27px;
 	padding-right: 10px;
@@ -593,20 +494,6 @@
 	justify-content: center;
 	gap: 60px;
 	flex-shrink: 0;
-}
-
-.col-top2 {
-	margin-left: 195px; margin-right: 195px;
-}
-
-.col-top2 .asds1 {
-	width: 99px;
-	line-height: normal;
-	text-align: left;
-}
-
-.col-top2 .column-subtitle2 {
-	margin-left: -58px; margin-right: -58px;
 }
 
 .web-row4 {
@@ -766,11 +653,6 @@
 	gap: 60px;
 }
 
-.col-top3 .asds1 {
-	width: 86px;
-	line-height: normal;
-	text-align: left;
-}
 
 .web-row5 {
 	height: 591px;
@@ -789,19 +671,11 @@
 	flex-grow: 1;
 }
 
-.asds2 {
-	width: 110px;
-}
-
 .card7 {
 	backdrop-filter: blur(6px);
 	max-width: 360px;
 	gap: 10px;
 	flex-grow: 1;
-}
-
-.asds3 {
-	width: 86px;
 }
 
 .card-right3 {
@@ -812,10 +686,6 @@
 	gap: 10px;
 	flex-grow: 1;
 	align-self: center;
-}
-
-.asds4 {
-	width: 147px;
 }
 
 .card-right-col {
@@ -836,13 +706,6 @@
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
-}
-
-.asds5 {
-	width: 105px;
-	align-self: center;
-	line-height: normal;
-	text-align: left;
 }
 
 .web-subtitle-tailored {
