--- a/Web/css/web.css
+++ b/Web/css/web.css
@@ -376,29 +376,25 @@
 .web-row2 {
 	container: web-row2 / inline-size;
 	display: flex;
-	align-items: flex-start;
-	text-align: left;
+	flex-wrap: wrap;
+	gap: 24px;
 }
 
-
-
-/* card-b */
-
-.card-b {
-	backdrop-filter: blur(2px);
-	width: 100%;
-	min-width: 500px;
+.card-block-2 {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	gap: 24px;
-	flex-grow: 1;
+	flex: 0 0 calc(50% - 12px);
+	box-sizing: border-box;
+	min-width: 500px;
 	background-color: rgba(247, 247, 247, 0.45);
 	padding: 23px;
 	border: 1px solid #e1e1e1;
 	border-radius: 20px;
 }
 
-.card-global {
+.card-block2-img {
 	width: 120px;
 	flex-shrink: 0;
 	aspect-ratio: 1 / 1;
@@ -424,19 +420,6 @@
 }
 /* end card-b*/
 
-
-.card2 {
-	margin-left: auto; margin-right: -1200px;
-	align-items: flex-end;
-}
-
-.card3 {
-	margin-right: 32px; margin-top: 200px;
-}
-
-.card4 {
-	margin-top: 200px;
-}
 
 .web-col3 {
 	container: web-col3 / inline-size;
@@ -875,7 +858,7 @@
 }
 
 @container web-row2 (width < 499px) {
-	.card-b {
+	.card-block-2 {
 		flex-direction: column;
 		gap: 18px;
 	}
