--- a/Web/css/web.css
+++ b/Web/css/web.css
@@ -291,7 +291,7 @@
 	background-color: #0ae5fe;
 }
 
-.web-row1 {
+.top-navigation {
 	container: web-row1 / inline-size;
 	position: absolute; z-index: 9; top: 26px; left: 149px; right: 148px; 
 	backdrop-filter: blur(9px);
@@ -333,7 +333,7 @@
 	max-width: 487px;
 }
 
-.web-col2 {
+.main-block-1 {
 	container: web-col2 / inline-size;
 	position: absolute; z-index: 11; top: 190px; left: 120px; right: 120px; 
 	display: flex;
@@ -363,7 +363,7 @@
 	text-align: center;
 }
 
-.web-row2 {
+.main-block-2 {
 	container: web-row2 / inline-size;
 	display: flex;
 	flex-wrap: wrap;
@@ -411,7 +411,7 @@
 /* end card-b*/
 
 
-.web-col3 {
+.features-block-3 {
 	container: web-col3 / inline-size;
 	display: flex;
 	flex-direction: column;
@@ -459,7 +459,7 @@
 	aspect-ratio: 1 / 1;
 }
 
-.web-col4 {
+.comparison-block-4 {
 	container: web-col4 / inline-size;
 	display: flex;
 	flex-direction: column;
@@ -547,7 +547,7 @@
 	background-image: linear-gradient(128deg, #04e4ef 0%, #4fff90 100%);
 }
 
-.web-col5 {
+.solutions-block-5 {
 	container: web-col5 / inline-size;
 	display: flex;
 	flex-direction: column;
@@ -565,44 +565,14 @@
 	padding: 0 36px;
 }
 
-.card-left {
+.solutions-card {
 	backdrop-filter: blur(6px);
 	max-width: 360px;
 	gap: 10px;
 	flex-grow: 1;
 }
 
-.card7 {
-	backdrop-filter: blur(6px);
-	max-width: 360px;
-	gap: 10px;
-	flex-grow: 1;
-}
-
-.card-right3 {
-	container: card-left / inline-size;
-	backdrop-filter: blur(6px);
-	height: 591px;
-	max-width: 360px;
-	gap: 10px;
-	flex-grow: 1;
-	align-self: center;
-}
-
-.card-right-col {
-	display: flex;
-	flex-direction: column;
-	gap: 24px;
-	align-self: stretch;
-}
-
-.card-right-text {
-	font-size: 20px;
-	font-weight: 600;
-	line-height: 1.4;
-}
-
-.web-col6 {
+.global-reach-block-6 {
 	container: web-col6 / inline-size;
 	display: flex;
 	flex-direction: column;
@@ -626,14 +596,14 @@
 	flex-grow: 1;
 }
 
-.web-col-bottom1 {
+.footer-block-7 {
 	display: flex;
 	flex-direction: column;
 	gap: 50px;
 	line-height: normal;
 }
 
-.web-col7 {
+.footer-center {
 	container: web-row1 / inline-size;
 	position: relative;
 	backdrop-filter: blur(2px);
@@ -650,7 +620,7 @@
 	overflow: hidden;
 }
 
-.web-col8 {
+.footer-graphics {
 	position: absolute; top: -313px; left: 569px; right: -848px; 
 	display: flex;
 	flex-direction: column;
@@ -708,8 +678,7 @@
 	background-image: linear-gradient(128deg, #04e4ef 0%, #4fff90 99%);
 }
 
-.web-col-bottom2 {
-	position: relative; z-index: 6;
+.footer-bottom {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -740,12 +709,12 @@
 /* container queries (flex rows) */
 
 @container web (width < 1149px) {
-	.web-row1 {
+	.top-navigation {
 		flex-direction: column;
 		align-items: center;
 		gap: 14px;
 	}
-	.web-row1 > * {
+	.top-navigation > * {
 		margin-left: unset !important; margin-right: unset !important;
 	}
 }
@@ -762,12 +731,12 @@
 }
 
 @container web-col2 (width < 831px) {
-	.web-row2 {
+	.main-block-2 {
 		flex-direction: column;
 		align-items: center;
 		gap: 22px;
 	}
-	.web-row2 > * {
+	.main-block-2 > * {
 		margin-left: unset !important; margin-right: unset !important; margin-top: unset !important;
 	}
 }
