--- a/Web/css/web.css
+++ b/Web/css/web.css
@@ -439,19 +439,6 @@
 }
 /* end row-a*/
 
-
-.row1 {
-	gap: 27px;
-	padding-right: 10px;
-}
-
-.web-row3 {
-	display: flex;
-	align-items: center;
-	gap: 37px;
-	padding: 32px 0;
-}
-
 .web-icon {
 	width: 100%;
 	max-width: 360px;
@@ -469,9 +456,7 @@
 }
 
 .web-row4 {
-	/*container: web-row4 / inline-size;*/
 	display: flex;
-	/*flex-wrap: wrap;*/
 	align-items: center;
 	gap: 12px;
 	color: #000;
@@ -558,6 +543,7 @@
 .web-row5 {
 	height: 591px;
 	display: flex;
+	align-items: center;
 	gap: 24px;
 	flex-shrink: 0;
 	line-height: normal;
@@ -566,10 +552,13 @@
 }
 
 .solutions-card {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
 	backdrop-filter: blur(6px);
 	max-width: 360px;
 	gap: 10px;
-	flex-grow: 1;
+	width: 100%;
 }
 
 .global-reach-block-6 {
@@ -773,7 +762,7 @@
 	.web-row5 {
 		height: unset;
 		flex-direction: column;
-		align-items: flex-start;
+		align-items: center;
 		gap: 100px;
 	}
 }
