--- a/Web/css/global.css
+++ b/Web/css/global.css
@@ -5,8 +5,10 @@
 	--margin-md: 32px;
 }
 
-html {
+html, body {
 	height: 100%;
+	margin: 0;
+	padding: 0;
 	font-size: 16px;
 	scroll-behavior: smooth; /* makes scrolling smooth */
 }
