--- a/Web/css/web.css
+++ b/Web/css/web.css
@@ -286,13 +286,21 @@
 	max-width: 487px;
 }
 
-.main-block-1 {
-	container: main-block-1 / inline-size;
+.main {
+	container: main / inline-size;
 	position: absolute; z-index: 11; top: 190px; left: 120px; right: 120px; 
 	display: flex;
 	flex-direction: column;
 	gap: 120px;
 	font-family: 'Poppins';
+}
+
+.main-block-1 {
+	container: main-block-1 / inline-size;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 24px;
 }
 
 .web-col-top1 {
