--- a/Web/css/web.css
+++ b/Web/css/web.css
@@ -157,7 +157,7 @@
 
 .web-col1 {
 	position: absolute; z-index: 8; top: 290px; left: -341px; right: -396px; 
-	display: flex;
+	display: none;
 	flex-direction: column;
 	align-items: flex-start;
 	gap: 646px;
@@ -328,6 +328,7 @@
 	container: main-block-2 / inline-size;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 	gap: 24px;
 }
 
@@ -622,7 +623,6 @@
 .footer-bottom {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
 	color: #5d6b82;
 	font-size: 12px;
 	font-weight: 400;
@@ -638,11 +638,19 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding: 20px 0;
 }
 
-.web-graphic-right {
-	width: 64px; height: 24px;
-	flex-shrink: 0;
+.social {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 64px;
+}
+
+.social-icon {
+	width: 24px;
+	height: 24px;
 }
 
 
@@ -657,6 +665,11 @@
 	}
 	.top-navigation > * {
 		margin-left: unset !important; margin-right: unset !important;
+	}
+	.main-block-2 {
+		flex-wrap: nowrap;
+		flex-direction: column;
+		align-items: center;
 	}
 }
 
