--- a/Web/css/global.css
+++ b/Web/css/global.css
@@ -6,11 +6,12 @@
 }
 
 html, body {
-	height: 100%;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
 	scroll-behavior: smooth; /* makes scrolling smooth */
+	overflow-x: hidden;
 }
 
 
